# cr29-kernel

./: .gitignore  CMakeLists.txt  COMPLETE_DOCUMENTATION.md  DISTRIBUTION_PACKAGE.md  INTEGRATION_TESTING_GUIDE.md  POOL_UPDATE_SUMMARY.md  README.md  SETUP_GUIDE.md  SHA3X_README.md  build.bat  build_sha3x.bat  compile.bat  compile_debug.bat  compile_fast.bat  compile_pool.bat  compile_simple.bat  compile_turbo.bat  demo_results.txt  quick_start.bat  sha3x_demo.cpp  sha3x_demo.py  start_sha3x_miner.bat
lib/: OpenCL.def  OpenCL.exp  OpenCL.lib
src/: cr29_debug.cpp  cr29_fast.cl  cr29_fast.cpp  cr29_mean.cl  cr29_miner.cpp  cr29_pool_miner.cpp  cr29_simple.cl  cr29_simple.cpp  cr29_turbo.cl  cr29_turbo.cpp  rdna4_optimized.cl  sha3x_algo.h  sha3x_cpu.h  sha3x_error_handling.h  sha3x_implementation.h  sha3x_kernel.cl  sha3x_mining_api.h  sha3x_multi_gpu.h  sha3x_performance_tuner.h  sha3x_performance_validation.h  sha3x_pool_miner.cpp  sha3x_stress_test.h  sha3x_test_suite.cpp  siphash.cl  test_pool_compatibility.cpp  test_sha3x.cpp  tls_socket.h  trimmer.cl  xtm_integration_main.cpp  xtm_integration_test.h
